# Routes/routes.js
@@ -1,10 +1,16 @@
 const express = require("express");
 const authController = require("../Controller/authController");
+const profileController = require("../Controller/profileController");
 
 const router = express.Router();
 
+//Auth Routes
 router.post("/auth/login", authController.login);
 router.post("/auth/register", authController.register);
 router.post("/auth/forgotPassword", authController.forgotPassword);
+
+//Profile Routes
+router.get("/profile", profileController.getProfile);
+router.post("/profile/update", profileController.updateProfile);
 
 module.exports = router;
